Vehicle svg alignment fix

--- a/src/components/VehicleDoors/_vehicle-doors.scss
+++ b/src/components/VehicleDoors/_vehicle-doors.scss
@@ -1,7 +1,7 @@
 .fl-vehicle-doors {
   width: 100%;
   height: 100%;
-  margin-left: $spacing-m;
+  margin-left: $spacing-l;
 }
 
 .fl-vehicle-doors__rear-left, .fl-vehicle-doors__rear-right, .fl-vehicle-doors__front-left, .fl-vehicle-doors__front-right {
